--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                 {
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Dashboard">Dashboard</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Gallery" asp-action="Index">Gallery</a></li>
+                    <li class="css-item"><a class="css-link" asp-controller="About-Management" asp-action="Index">About-Management</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Blood" asp-action="Index">Blood</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Members">Members</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Welfare">Welfare</a></li>
